--- a/src/BOJ11729/BOJ11729.vcxproj
+++ b/src/BOJ11729/BOJ11729.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{38d4baeb-07e8-4542-b9e6-60f7dc45bbd0}</ProjectGuid>
-    <RootNamespace>BOJ1629</RootNamespace>
+    <ProjectGuid>{4701c855-b268-4dd5-9257-fdbd6edb58f1}</ProjectGuid>
+    <RootNamespace>BOJ11729</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,10 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BOJ1629.cpp" />
+    <ClCompile Include="BOJ11729.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="README.md" />
+    <None Include="READMD.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
